@@ -1,3 +1,8 @@
+2012-06-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awgram.y (stopme): Restore long lost debugging function.
+	* awgram.y (stopme): Add declaration.
+
 2012-06-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Remove code duplication in gawkapi.c from msg.c:
